ingress-cert-manager/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: microservice
  name: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
      - image: ghcr.io/mcicolella/docker-microservice
        name: docker-microservice
