ingress-cert-manager/ingress-no-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-ingress-no-tls
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "emmecilab.cloud"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: microservice
            port:
              number: 9000
